Fix teacher notes' chevron dark mode styling

--- a/src/scss/phy/elements.scss
+++ b/src/scss/phy/elements.scss
@@ -37,17 +37,6 @@ details.teacher-notes {
     &::marker {
       content: '';
     }
-
-    &::after {
-      content: "";
-      display: inline-block;
-      background: url('/assets/phy/icons/redesign/chevron-down.svg') no-repeat center center;
-      height: 16px;
-      width: 16px;
-      margin-left: 8px;
-      transform: rotate(-90deg);
-      transition: transform 0.1s ease-in-out;
-    }
   }
 
   > div {
@@ -63,10 +52,6 @@ details.teacher-notes {
     border-bottom: 0;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-
-    &::after {
-      transform: rotate(0deg);
-    }
   }
 }
 
